--- a/angular.json
+++ b/angular.json
@@ -101,7 +101,10 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+          "baseHref": "/logical-programs-frontend/"
+         }
         }
       }
     }
