--- a/deploy.yml
+++ b/deploy.yml
@@ -5,38 +5,17 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm ci
-        
-    - name: Build Angular
-      run: npm run build -- --configuration production --base-href="/logical-programs-frontend/"
-      
-    - name: Setup Pages
-      uses: actions/configure-pages@v3
-      
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v2
+    - run: npm ci
+    - run: npm run build -- --configuration production --base-href="/logical-programs-frontend/" --no-build-optimizer
+    - uses: peaceiris/actions-gh-pages@v3
       with:
-        path: './dist/logical-programs'
-        
-    - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages@v2
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist/logical-programs
